objects/QIDC__IMS_Label_Translation_ims__c.object
<CustomObject>
    <description>The IMS Label Translation object is where the language is determined that the label will be translated in. This assists in translating the app for international implementation.</description>
    <fields>
        <fullName>QIDC__ID_ims__c</fullName>
        <description>Unique number assigned to the IMS Label Translation which denotes the entry was made by IMS and therefore clients cannot change.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Unique number assigned to the IMS Label Translation which denotes the entry was made by IMS and therefore clients cannot change.</inlineHelpText>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__IMS_Label_ims__c</fullName>
        <description>The IMS Label for which the IMS Label Translation is for.</description>
        <inlineHelpText>The IMS Label for which the IMS Label Translation is for.</inlineHelpText>
        <label>IMS Label</label>
        <referenceTo>QIDC__IMS_Label_ims__c</referenceTo>
        <relationshipLabel>IMS Label Translations</relationshipLabel>
        <relationshipName>IMS_Label_Translations_ims</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIDC__ISO_Language_Code_ims__c</fullName>
        <description>The language code of the language for which the text will be translated to.</description>
        <inlineHelpText>The language code of the language for which the text will be translated to.</inlineHelpText>
        <label>ISO Language Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                    <label>en_US</label>
                </value>
                <value>
                    <fullName>fr_CA</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>el</fullName>
                </value>
                <value>
                    <fullName>hu</fullName>
                </value>
                <value>
                    <fullName>pl</fullName>
                </value>
                <value>
                    <fullName>ro</fullName>
                </value>
                <value>
                    <fullName>uk</fullName>
                </value>
                <value>
                    <fullName>pt_PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Integration_ID_ims__c</fullName>
        <description>External ID which is used for data loading only.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>External ID which is used for data loading only.</inlineHelpText>
        <label>Integration ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Is_Active_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the IMS Label Translation is active.</description>
        <inlineHelpText>Indicates if the IMS Label Translation is active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_ID_ims__c</fullName>
        <description>IMS Unique ID of the parent record. This field will contain value only if there is a parent record associated with a master detail or look up relationship. For eg, Chart detail is child of Chart.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>IMS Unique ID of the parent record. This field will contain value only if there is a parent record associated with a master detail or look up relationship. For eg, Chart detail is child of Chart.</inlineHelpText>
        <label>Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Product_Version_ims__c</fullName>
        <description>IMS Product version in which this config data was created.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>IMS Product version in which this config data was created.</inlineHelpText>
        <label>Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Value_ims__c</fullName>
        <description>Translated value of the text from the parent IMS Label record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Translated value of the text from the parent IMS Label record.</inlineHelpText>
        <label>Value</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>IMS Label Translation</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>QIDC__All_IMS_Label_Translations</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Is_Active_ims__c</columns>
        <columns>QIDC__IMS_Label_ims__c</columns>
        <columns>QIDC__ID_ims__c</columns>
        <columns>QIDC__ISO_Language_Code_ims__c</columns>
        <columns>QIDC__Value_ims__c</columns>
        <filterScope>Everything</filterScope>
        <label>All IMS Label Translations</label>
    </listViews>
    <nameField>
        <displayFormat>CLT-{0000}</displayFormat>
        <label>Custom Label Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IMS Label Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>